--- a/assets/style.css
+++ b/assets/style.css
@@ -18,6 +18,12 @@ body {
   align-items: center;
 }
 
+.fa-instagram {
+  color: #000000;
+  height: 100%;
+  width: 100%;
+}
+
 .top-header .name {
   font-size: 26px;
 }
@@ -40,6 +46,10 @@ body {
 
 .social-link img {
   width: 20px;
+}
+
+.off-screen {
+  display: none;
 }
 
 #about {
@@ -77,6 +87,7 @@ body {
 }
 #about-me {
   flex: 2;
+  font-size: 14px;
 }
 .about-me__title {
   margin-top: 1em;
@@ -88,14 +99,16 @@ body {
   font-weight: 800;
   font-style: italic;
   width: 60%;
-}
-#about-me p {
-  width: 80%;
-  font-size: 14px;
+  font-size: 20px;
 }
 
+#about-me p {
+  width: 80%;
+}
+
+/* commentaire enlever pour la min-heigt */
 #gallery {
-  /*	min-height: 100vh; */
+  min-height: 100vh;
 }
 
 .title {
@@ -153,6 +166,7 @@ body {
   font-family: Spectral;
   font-style: italic;
   font-weight: 300;
+  font-size: 40px;
 }
 .quote__author {
   font-family: Spectral;
