--- a/assets/style.css
+++ b/assets/style.css
@@ -79,7 +79,7 @@ body {
 
 .index-img {
   width: 100%;
-  height: auto;
+  height: 100%;
 }
 
 .picture img {
@@ -120,13 +120,19 @@ body {
 }
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
-  color: #fff;
+  color: #000;
   background-color: #beb45a;
   border-radius: 0;
 }
 .nav-pills .nav-link {
   color: #000;
 }
+
+.gallery li button {
+  border: none;
+  background-color: transparent;
+}
+
 .item-column {
   position: relative;
   margin-bottom: 0 !important;
@@ -241,7 +247,7 @@ form {
 
 form input {
   width: 100%;
-  background-color: transparent;
+  background-color: white;
   border: solid 1px;
   height: 2.5em;
   margin-bottom: 20px;
@@ -249,7 +255,7 @@ form input {
 
 form textarea {
   width: 100%;
-  background-color: transparent;
+  background-color: white;
   border: solid 1px;
   height: 5em;
   line-height: 2.5em;
